# wangchuan-memory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  README_EN.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: alpha_feedback.yml  bug_report.yml
.github/workflows/: ci.yml
docs/: ALPHA_TRIAL_GUIDE.md  API_CONTRACT.md  ARCHITECTURE.md  CLI.md  DEPRECATION_POLICY.md  FAQ.md  FEEDBACK_TEMPLATE.md  MCP.md  QUICKSTART.md  RELEASE_ALPHA.md  STORAGE.md  TROUBLESHOOTING.md
examples/: basic_memory.py  cli_demo.sh
scripts/: release_check.py
src/wangchuan/: MCP_GUIDE.md  README.md  README_EN.md  __init__.py  __main__.py  canonical_repair.py  chat_memory.py  classifier.py  context_protocol.py  curiosity_engine.py  db_utils.py  engine.py  errors.py  facade.py  fts_utils.py  mcp_server.py  memory_acl.py  memory_api.py  memory_basic_utils.py  memory_delete.py  memory_diagnostics.py  memory_encryption.py  memory_hot_priority.py  memory_hot_sync.py  memory_lesson_candidates.py  memory_llm_client.py  memory_llm_extract.py  memory_markdown_utils.py  memory_merge.py  memory_metadata_builder.py  memory_metadata_trace.py  memory_multimodal.py  (+28 more)
tests/: test_alpha_trial_scenarios.py  test_api_contract_docs.py  test_api_imports.py  test_build_artifacts.py  test_cli.py  test_docs_structure.py  test_error_messages.py  test_examples_smoke.py  test_facade_contract.py  test_faq_contract.py  test_first_run.py  test_healthcheck_export.py  test_migrations.py  test_release_check.py  test_release_smoke.py  test_remember_recall.py
(+106 files in other folders)
