[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wangchuan-memory"
version = "3.0.0-alpha"
description = "WangChuan - Evidence-aware Agent Memory Engine"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Agent Teams" }
]
keywords = ["agent", "memory", "ai", "knowledge-graph", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0",
  "anthropic>=0.30",
]
mcp = [
  "mcp>=1.0",
]
crypto = [
  "cryptography>=40.0",
]
dev = [
  "pytest>=7.0",
]
full = [
  "wangchuan-memory[llm]",
  "wangchuan-memory[mcp]",
  "wangchuan-memory[crypto]",
  "wangchuan-memory[dev]",
]

[project.urls]
Homepage = "https://github.com/your-org/wangchuan-memory"
Repository = "https://github.com/your-org/wangchuan-memory"
Documentation = "https://github.com/your-org/wangchuan-memory#readme"

[project.scripts]
wangchuan = "wangchuan.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["wangchuan*"]
